--- a/Info.plist
+++ b/Info.plist
@@ -32,5 +32,7 @@
 	<false/>
 	<key>CFBundleName</key>
 	<string>Note+</string>
+	<key>XSAppIconAssets</key>
+	<string>Assets.xcassets/AppIcon.appiconset</string>
 </dict>
 </plist>
